[project]
name = "docs-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.3",
    "faiss-cpu>=1.11.0",
    "jq>=1.9.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.27",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "supabase>=2.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
